Fix the flot legend wrapping problem
`white-space: nowrap` FTW.

--- a/tessera/static/tessera.css
+++ b/tessera/static/tessera.css
@@ -374,6 +374,7 @@ table.ds-property-sheet td {
 
 .ds-legend-cell {
   display: inline-block;
+  white-space: nowrap;
 }
 
 .ds-legend-cell .color {
